fix project carousel scaling on Safari

--- a/src/styles/components/project-card.scss
+++ b/src/styles/components/project-card.scss
@@ -24,7 +24,6 @@
   margin-bottom: 20px;
   
   @include v.md {
-    min-height: 512px;
     width: 288px;
     margin-left: 20px;
     margin-right: 20px;
@@ -48,7 +47,8 @@
 
 .project-image {
   object-fit: contain;
-  height: 100%;
+  width: 100%;
+  max-height: 200px;
 }
   
 .project-card-description-container {
@@ -92,4 +92,15 @@
   color: v.$body-text-color;
   background-color: v.$bg-color;
   border: none;
+}
+
+.react-multiple-carousel__arrow--left {
+  margin-left: -25px;
+}
+.react-multiple-carousel__arrow--right {
+  margin-right: -25px;
+}
+
+.react-multiple-carousel__arrow--left, .react-multiple-carousel__arrow--right {
+  background: none;
 }
